--- a/notes/Codedojo/4-kyu/Snail/index.html
+++ b/notes/Codedojo/4-kyu/Snail/index.html
@@ -9,7 +9,7 @@
 <script defer src=https://redsteadz.github.io/glowing-computing-machine/js/code-title.ce4a43f09239a9efb48fee342e8ef2df.min.js></script>
 <script defer src=https://redsteadz.github.io/glowing-computing-machine/js/clipboard.2913da76d3cb21c5deaa4bae7da38c9f.min.js></script>
 <script defer src=https://redsteadz.github.io/glowing-computing-machine/js/callouts.7723cac461d613d118ee8bb8216b9838.min.js></script>
-<script>const SEARCH_ENABLED=!1,LATEX_ENABLED=!0,PRODUCTION=!0,BASE_URL="https://redsteadz.github.io/glowing-computing-machine/",fetchData=Promise.all([fetch("https://redsteadz.github.io/glowing-computing-machine/indices/linkIndex.24b3c529ddef2b7a2be051f2a730940a.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://redsteadz.github.io/glowing-computing-machine/indices/contentIndex.a609303d1e90a2147e9288e02f87fa96.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,s=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://redsteadz.github.io/glowing-computing-machine",!0);const o=document.getElementById("footer");if(o){const e=document.getElementById("graph-container");if(!e)return requestAnimationFrame(render);e.textContent="";const t=s&&!1;drawGraph("https://redsteadz.github.io/glowing-computing-machine",t,[{"/moc":"#4388cc"}],t?{centerForce:1,depth:-1,enableDrag:!0,enableLegend:!1,enableZoom:!0,fontSize:.5,linkDistance:1,opacityScale:3,repelForce:1,scale:1.4}:{centerForce:1,depth:1,enableDrag:!0,enableLegend:!1,enableZoom:!0,fontSize:.6,linkDistance:1,opacityScale:3,repelForce:2,scale:1.2})}var i=document.getElementsByClassName("mermaid");i.length>0&&import("https://unpkg.com/mermaid@9/dist/mermaid.esm.min.mjs").then(e=>{e.default.init()})},init=(e=document)=>{addCopyButtons(),addTitleToCodeBlocks(),renderMathInElement(e.body,{delimiters:[{left:"$$",right:"$$",display:!0},{left:"$",right:"$",display:!1}],macros:{'’':"'"},throwOnError:!1})}</script><script type=module>
+<script>const SEARCH_ENABLED=!1,LATEX_ENABLED=!0,PRODUCTION=!0,BASE_URL="https://redsteadz.github.io/glowing-computing-machine/",fetchData=Promise.all([fetch("https://redsteadz.github.io/glowing-computing-machine/indices/linkIndex.24b3c529ddef2b7a2be051f2a730940a.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://redsteadz.github.io/glowing-computing-machine/indices/contentIndex.f83308023179f1ceb77e4df03b29e381.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,s=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://redsteadz.github.io/glowing-computing-machine",!0);const o=document.getElementById("footer");if(o){const e=document.getElementById("graph-container");if(!e)return requestAnimationFrame(render);e.textContent="";const t=s&&!1;drawGraph("https://redsteadz.github.io/glowing-computing-machine",t,[{"/moc":"#4388cc"}],t?{centerForce:1,depth:-1,enableDrag:!0,enableLegend:!1,enableZoom:!0,fontSize:.5,linkDistance:1,opacityScale:3,repelForce:1,scale:1.4}:{centerForce:1,depth:1,enableDrag:!0,enableLegend:!1,enableZoom:!0,fontSize:.6,linkDistance:1,opacityScale:3,repelForce:2,scale:1.2})}var i=document.getElementsByClassName("mermaid");i.length>0&&import("https://unpkg.com/mermaid@9/dist/mermaid.esm.min.mjs").then(e=>{e.default.init()})},init=(e=document)=>{addCopyButtons(),addTitleToCodeBlocks(),renderMathInElement(e.body,{delimiters:[{left:"$$",right:"$$",display:!0},{left:"$",right:"$",display:!1}],macros:{'’':"'"},throwOnError:!1})}</script><script type=module>
     import { attachSPARouting } from "https:\/\/redsteadz.github.io\/glowing-computing-machine\/js\/router.9d4974281069e9ebb189f642ae1e3ca2.min.js"
     attachSPARouting(init, render)
   </script></head><script async src="https://www.googletagmanager.com/gtag/js?id=G-XYFD95KB4J"></script>
@@ -64,37 +64,37 @@ Jan 13, 2023
 </span><span class=lnt>29
 </span><span class=lnt>30
 </span><span class=lnt>31
-</span></code></pre></td><td class=lntd><pre tabindex=0 class=chroma><code class=language-fallback data-lang=fallback><span class=line><span class=cl>snail = function(array) {
-</span></span><span class=line><span class=cl>    // enjoy
-</span></span><span class=line><span class=cl>    let arr = array
-</span></span><span class=line><span class=cl>    let snail = []
-</span></span><span class=line><span class=cl>    while (arr[0] != null &amp;&amp; arr.length !== 0){ // Continue till the array is empty
-</span></span><span class=line><span class=cl>    let cr = []; let cl = []; // Reset the coloumn right and left (cr, cl)
-</span></span><span class=line><span class=cl>
-</span></span><span class=line><span class=cl>      for (i=1; i&lt;arr.length-1; i++){
-</span></span><span class=line><span class=cl>              cr.push(arr[i].pop())     // Takes the right most value of column
-</span></span><span class=line><span class=cl>              cl.unshift(arr[i].shift())// Takes the left most value of column
-</span></span><span class=line><span class=cl>            }
+</span></code></pre></td><td class=lntd><pre tabindex=0 class=chroma><code class=language-javascript data-lang=javascript><span class=line><span class=cl><span class=nx>snail</span> <span class=o>=</span> <span class=kd>function</span><span class=p>(</span><span class=nx>array</span><span class=p>)</span> <span class=p>{</span>
+</span></span><span class=line><span class=cl>    <span class=c1>// enjoy
+</span></span></span><span class=line><span class=cl><span class=c1></span>    <span class=kd>let</span> <span class=nx>arr</span> <span class=o>=</span> <span class=nx>array</span>
+</span></span><span class=line><span class=cl>    <span class=kd>let</span> <span class=nx>snail</span> <span class=o>=</span> <span class=p>[]</span>
+</span></span><span class=line><span class=cl>    <span class=k>while</span> <span class=p>(</span><span class=nx>arr</span><span class=p>[</span><span class=mi>0</span><span class=p>]</span> <span class=o>!=</span> <span class=kc>null</span> <span class=o>&amp;&amp;</span> <span class=nx>arr</span><span class=p>.</span><span class=nx>length</span> <span class=o>!==</span> <span class=mi>0</span><span class=p>){</span> <span class=c1>// Continue till the array is empty
+</span></span></span><span class=line><span class=cl><span class=c1></span>    <span class=kd>let</span> <span class=nx>cr</span> <span class=o>=</span> <span class=p>[];</span> <span class=kd>let</span> <span class=nx>cl</span> <span class=o>=</span> <span class=p>[];</span> <span class=c1>// Reset the coloumn right and left (cr, cl)
+</span></span></span><span class=line><span class=cl><span class=c1></span>
+</span></span><span class=line><span class=cl>      <span class=k>for</span> <span class=p>(</span><span class=nx>i</span><span class=o>=</span><span class=mi>1</span><span class=p>;</span> <span class=nx>i</span><span class=o>&lt;</span><span class=nx>arr</span><span class=p>.</span><span class=nx>length</span><span class=o>-</span><span class=mi>1</span><span class=p>;</span> <span class=nx>i</span><span class=o>++</span><span class=p>){</span>
+</span></span><span class=line><span class=cl>              <span class=nx>cr</span><span class=p>.</span><span class=nx>push</span><span class=p>(</span><span class=nx>arr</span><span class=p>[</span><span class=nx>i</span><span class=p>].</span><span class=nx>pop</span><span class=p>())</span>     <span class=c1>// Takes the right most value of column
+</span></span></span><span class=line><span class=cl><span class=c1></span>              <span class=nx>cl</span><span class=p>.</span><span class=nx>unshift</span><span class=p>(</span><span class=nx>arr</span><span class=p>[</span><span class=nx>i</span><span class=p>].</span><span class=nx>shift</span><span class=p>())</span><span class=c1>// Takes the left most value of column
+</span></span></span><span class=line><span class=cl><span class=c1></span>            <span class=p>}</span>
 </span></span><span class=line><span class=cl>  
-</span></span><span class=line><span class=cl>    snail.push(arr.shift()) // Inputs Top
+</span></span><span class=line><span class=cl>    <span class=nx>snail</span><span class=p>.</span><span class=nx>push</span><span class=p>(</span><span class=nx>arr</span><span class=p>.</span><span class=nx>shift</span><span class=p>())</span> <span class=c1>// Inputs Top
+</span></span></span><span class=line><span class=cl><span class=c1></span>
+</span></span><span class=line><span class=cl>    <span class=nx>snail</span><span class=p>.</span><span class=nx>push</span><span class=p>(</span><span class=nx>cr</span><span class=p>)</span> <span class=c1>// Inputs Right
+</span></span></span><span class=line><span class=cl><span class=c1></span>
+</span></span><span class=line><span class=cl>    <span class=k>if</span><span class=p>(</span><span class=nx>arr</span><span class=p>[</span><span class=mi>0</span><span class=p>]</span> <span class=o>!=</span> <span class=kc>null</span><span class=p>){</span>         <span class=c1>//
+</span></span></span><span class=line><span class=cl><span class=c1></span>          <span class=kd>let</span> <span class=nx>last_r</span> <span class=o>=</span> <span class=nx>arr</span><span class=p>.</span><span class=nx>pop</span><span class=p>()</span><span class=c1>// Inputs Bottom Value
+</span></span></span><span class=line><span class=cl><span class=c1></span>          <span class=nx>last_r</span><span class=p>.</span><span class=nx>reverse</span><span class=p>()</span>      <span class=c1>//
+</span></span></span><span class=line><span class=cl><span class=c1></span>          <span class=nx>snail</span><span class=p>.</span><span class=nx>push</span><span class=p>(</span><span class=nx>last_r</span><span class=p>)}</span>   <span class=c1>//
+</span></span></span><span class=line><span class=cl><span class=c1></span>    
+</span></span><span class=line><span class=cl>      <span class=nx>snail</span><span class=p>.</span><span class=nx>push</span><span class=p>(</span><span class=nx>cl</span><span class=p>)</span><span class=c1>// Inputs Left
+</span></span></span><span class=line><span class=cl><span class=c1></span>
+</span></span><span class=line><span class=cl>      <span class=nx>arr</span><span class=p>.</span><span class=nx>length</span> <span class=o>==</span> <span class=mi>1</span> <span class=o>?</span> <span class=nx>snail</span><span class=p>.</span><span class=nx>push</span><span class=p>(</span><span class=nx>arr</span><span class=p>.</span><span class=nx>shift</span><span class=p>())</span> <span class=o>:</span> <span class=kc>null</span> <span class=c1>// Inputs Center Value
+</span></span></span><span class=line><span class=cl><span class=c1></span>      <span class=nx>cr</span> <span class=o>=</span> <span class=p>[]</span>
+</span></span><span class=line><span class=cl>      <span class=nx>cl</span><span class=o>=</span> <span class=p>[]</span> 
+</span></span><span class=line><span class=cl>    <span class=p>}</span>
+</span></span><span class=line><span class=cl>  <span class=k>return</span> <span class=nx>snail</span><span class=p>.</span><span class=nx>flat</span><span class=p>()</span>
+</span></span><span class=line><span class=cl><span class=p>}</span>
 </span></span><span class=line><span class=cl>
-</span></span><span class=line><span class=cl>    snail.push(cr) // Inputs Right
-</span></span><span class=line><span class=cl>
-</span></span><span class=line><span class=cl>    if(arr[0] != null){         //
-</span></span><span class=line><span class=cl>          let last_r = arr.pop()// Inputs Bottom Value
-</span></span><span class=line><span class=cl>          last_r.reverse()      //
-</span></span><span class=line><span class=cl>          snail.push(last_r)}   //
-</span></span><span class=line><span class=cl>    
-</span></span><span class=line><span class=cl>      snail.push(cl)// Inputs Left
-</span></span><span class=line><span class=cl>
-</span></span><span class=line><span class=cl>      arr.length == 1 ? snail.push(arr.shift()) : null // Inputs Center Value
-</span></span><span class=line><span class=cl>      cr = []
-</span></span><span class=line><span class=cl>      cl= [] 
-</span></span><span class=line><span class=cl>    }
-</span></span><span class=line><span class=cl>  return snail.flat()
-</span></span><span class=line><span class=cl>}
-</span></span><span class=line><span class=cl>
-</span></span><span class=line><span class=cl>console.log(snail([[1, 2, 3, 4, 5], [6, 7, 8, 9, 10], [11, 12, 13, 14, 15], [16, 17, 18, 19, 20], [21, 22, 23, 24, 25]]))
+</span></span><span class=line><span class=cl><span class=nx>console</span><span class=p>.</span><span class=nx>log</span><span class=p>(</span><span class=nx>snail</span><span class=p>([[</span><span class=mi>1</span><span class=p>,</span> <span class=mi>2</span><span class=p>,</span> <span class=mi>3</span><span class=p>,</span> <span class=mi>4</span><span class=p>,</span> <span class=mi>5</span><span class=p>],</span> <span class=p>[</span><span class=mi>6</span><span class=p>,</span> <span class=mi>7</span><span class=p>,</span> <span class=mi>8</span><span class=p>,</span> <span class=mi>9</span><span class=p>,</span> <span class=mi>10</span><span class=p>],</span> <span class=p>[</span><span class=mi>11</span><span class=p>,</span> <span class=mi>12</span><span class=p>,</span> <span class=mi>13</span><span class=p>,</span> <span class=mi>14</span><span class=p>,</span> <span class=mi>15</span><span class=p>],</span> <span class=p>[</span><span class=mi>16</span><span class=p>,</span> <span class=mi>17</span><span class=p>,</span> <span class=mi>18</span><span class=p>,</span> <span class=mi>19</span><span class=p>,</span> <span class=mi>20</span><span class=p>],</span> <span class=p>[</span><span class=mi>21</span><span class=p>,</span> <span class=mi>22</span><span class=p>,</span> <span class=mi>23</span><span class=p>,</span> <span class=mi>24</span><span class=p>,</span> <span class=mi>25</span><span class=p>]]))</span>
 </span></span></code></pre></td></tr></table></div></div><p><img src=https://redsteadz.github.io/glowing-computing-machine//notes/Codedojo/4%20kyu/attachments/Snail%202023-01-13%2000.53.26.excalidraw.svg width=auto alt>
 %%
 <a rel=noopener class="internal-link broken" data-src=notes/Codedojo/4%20kyu/attachments/Snail%202023-01-13%2000.53.26.excalidraw>🖋 Edit in Excalidraw</a>, and the
